--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
     <h1>Hello World!!</1>
     <p>Here is some smaple text, we can even make thing <b>bold</b>
       or <i>italics<i>. The quick brow fox jumped over the lazy dgs.
+      <hr>
+      
+      <img src = "katsu.JPG">
+      
   </body>
 </html>
