--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       or <i>italics<i>. The quick brow fox jumped over the lazy dgs.
       <hr>
       
-      <img src = "katsu.JPG">
+      <a href= "katsu.JPG">
+        <img src = "katsu.JPG" height="20%">
       
   </body>
 </html>
