--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <br>
       
       <a href="katsu.JPG">
-        <img src="katsu.JPG" height="20%">
+        <img src="katsu.JPG">
       
   </body>
 </html>
