--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
-  <title.My First Webpage</title>
+  <title>My First Webpage</title>
   <body>
     <h1>Hello World!!</1>
-    <p>Here is some smaple text, we can even make thing <b>bold</b>
-      or <i>italics<i>. The quick brow fox jumped over the lazy dgs.
+    <p>Here is some sample text, we can even make thing <b>bold</b>
+      or <i>italics<i>. The quick brow fox jumped over the lazy dogs.
       <br>
       
       <a href="katsu.JPG">
         <img src="katsu.JPG">
       </a>
         <p> hello </p>
-        
-  </body>
+      </br>
+      </body>
 </html>
