--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       or <i>italics<i>. The quick brow fox jumped over the lazy dogs.
       <br>
       
-      <a href="katsu.JPG">
-        <img src="katsu.JPG">
+      <a href="katsu.jpg">
+        <img src="katsu.jpg">
       </a>
         <p> hello </p>
       </br>
