--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>My First Webpage</title>
   <body>
     <h1>Hello World!!</1>
-    <p>Here is some sample text, we can even make thing <b>bold</b>
+    <p>Here is some sample text, we can even make things <b>bold</b>
       or <i>italics<i>. The quick brow fox jumped over the lazy dogs.
       <br>
       
