--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <br>
       
       <a href="katsu.jpg">
-        <img src="katsu.jpg">
+        <img src="katsu.jpg" height=20%">
       </a>
         <p> hello </p>
       </br>
