--- a/pagethree.html
+++ b/pagethree.html
@@ -12,6 +12,10 @@
 	  <td rowspan = 2> Photography </td> <td> ?? </td>
          </tr>
         <tr> <td> 7:20-8:10 </td> <td> Ms. Schou </td> </tr>
+	    <tr> <td> 1</td>
+	  <td rowspan = 2> Biology </td> <td> ?? </td>
+         </tr>
+        <tr> <td> ?? </td> <td> Mr. Caesar </td> </tr>
     </table>
 
   </body>
