--- a/pagefour.html
+++ b/pagefour.html
@@ -5,6 +5,10 @@
        color: blue;
         font size: 20pt;
       }
+      h2 {
+       color: red;
+        font size: 10pt;
+      }
       </style>
   </head>
   <body>
