--- a/pagefour.html
+++ b/pagefour.html
@@ -16,5 +16,7 @@
     <p> hi, how are you? </p>
     <h2> we're good thank you </h2>
     <h1> That's nice </h1>
+    <a href="katsu.jpg>
+             <img src="katsu.jpg" height="10%">
   </body>
 </html>
