--- a/pagefour.html
+++ b/pagefour.html
@@ -25,5 +25,22 @@
       </a>
         <p> dog </p>
       </br>
+                                        <table border = 2px>
+       <tr>
+         <th colspan = 3> My Schedule </th>
+           </tr>
+             <tr>
+	      <th> Period </th> <th> Subject </th>
+               <th> Location </th>
+              </tr>
+            <tr> <td> 1</td>
+	  <td rowspan = 2> Photography </td> <td> ?? </td>
+         </tr>
+        <tr> <td> 7:20-8:10 </td> <td> Ms. Schou </td> </tr>
+	    <tr> <td> 1</td>
+	  <td rowspan = 2> Biology </td> <td> ?? </td>
+         </tr>
+        <tr> <td> ?? </td> <td> Mr. Caesar </td> </tr>
+    </table>
   </body>
 </html>
