--- a/pagefour.html
+++ b/pagefour.html
@@ -42,5 +42,16 @@
          </tr>
         <tr> <td> ?? </td> <td> Mr. Caesar </td> </tr>
     </table>
+					<h1>Grocery list</h1>
+    <ul>
+      <li>lemons</li>
+      <li>garlic</li>
+      <li>salmon</li>
+    </ul>
+					<ol>
+					<li>Wake up</li>
+					<li>Get ready</li>
+					<li>Go out</li>
+					</ol>
   </body>
 </html>
